<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/createPizzaLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_login_user">


    <TextView
        android:id="@+id/Tv_Massa"
        android:layout_width="120dp"
        android:layout_height="28dp"
        android:layout_above="@+id/textView"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="12dp"
        android:text="@string/tv_Massa"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.054"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etDescription" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="383dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="10dp"
        android:background="@drawable/edittext_rounded_corner"
        android:drawableRight="@android:drawable/arrow_down_float"
        android:drawablePadding="16dp"
        android:hint="@string/btn_SelectMassa"
        android:padding="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Tv_Massa" />

    <TextView
        android:id="@+id/tv_creacionpizza"
        android:layout_width="409dp"
        android:layout_height="108dp"
        android:layout_marginTop="16dp"
        android:text="@string/tv_User_creacionpizza"
        android:textSize="45sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/Tv_User_mensajeCreacion"
        android:layout_width="413dp"
        android:layout_height="52dp"
        android:layout_marginTop="12dp"
        android:text="@string/tv_Mensaje"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_creacionpizza" />

    <TextView
        android:id="@+id/tv_PizzaName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:text="@string/tv_PizzaName"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Tv_User_mensajeCreacion" />

    <EditText
        android:id="@+id/etPizzaName"
        android:layout_width="176dp"
        android:layout_height="30dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="20dp"
        android:autofillHints=""
        android:background="@drawable/edittext_rounded_corner"
        android:hint="@string/et_UserName"
        android:inputType="text"
        android:padding="8dp"
        android:textSize="13sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_PizzaName" />

    <TextView
        android:id="@+id/Tv_Price"
        android:layout_width="80dp"
        android:layout_height="22dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="128dp"
        android:text="@string/tv_PricePizza"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Tv_User_mensajeCreacion" />

    <EditText
        android:id="@+id/et_Price"
        android:layout_width="176dp"
        android:layout_height="30dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="32dp"
        android:autofillHints=""
        android:background="@drawable/edittext_rounded_corner"
        android:hint="@string/tv_PricePizza"
        android:inputType="text"
        android:padding="8dp"
        android:textSize="13sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Tv_Price" />

    <TextView
        android:id="@+id/Tv_Description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:text="@string/tv_DescriptionPizza"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_Price" />

    <EditText
        android:id="@+id/etDescription"
        android:layout_width="378dp"
        android:layout_height="40dp"
        android:layout_marginTop="12dp"
        android:autofillHints=""
        android:background="@drawable/edittext_rounded_corner"
        android:hint="@string/tv_DescriptionPizza"
        android:inputType="text"
        android:padding="8dp"
        android:textSize="13sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Tv_Description" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/addPizza1"
        android:layout_width="56dp"
        android:layout_height="62dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="144dp"
        android:backgroundTint="@android:color/background_light"
        android:clickable="true"
        android:focusable="true"
        android:src="@drawable/add_pizza"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>