<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/updatePizzaLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_login_user">


    <TextView
        android:id="@+id/TvIndexUpdatePizza"
        android:layout_width="409dp"
        android:layout_height="108dp"
        android:layout_marginTop="16dp"
        android:text="@string/tv_UpdatePizzaIndex"
        android:textSize="45sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/UpdateTv_mensajePizza"
        android:layout_width="413dp"
        android:layout_height="52dp"
        android:layout_marginTop="12dp"
        android:text="@string/UpdateTv_mensajePizza"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/TvIndexUpdatePizza" />

    <TextView
        android:id="@+id/UpdateTv_PizzaName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/tv_PizzaNameUpdate"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/UpdateTv_mensajePizza" />

    <EditText
        android:id="@+id/etUpdatePizzaName"
        android:layout_width="176dp"
        android:layout_height="30dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="20dp"
        android:autofillHints=""
        android:background="@drawable/edittext_rounded_corner"
        android:hint="@string/et_PizzaNameUpdate"
        android:inputType="text"
        android:padding="8dp"
        android:textSize="13sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/UpdateTv_PizzaName" />

    <TextView
        android:id="@+id/UpdateTv_Price"
        android:layout_width="80dp"
        android:layout_height="22dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="128dp"
        android:text="@string/tv_PricePizza"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/UpdateTv_mensajePizza" />

    <EditText
        android:id="@+id/EtPriceUpdate"
        android:layout_width="176dp"
        android:layout_height="30dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="32dp"
        android:autofillHints=""
        android:background="@drawable/edittext_rounded_corner"
        android:hint="@string/tv_PricePizza"
        android:inputType="text"
        android:padding="8dp"
        android:textSize="13sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/UpdateTv_Price" />

    <TextView
        android:id="@+id/TvDescriptionUpdate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="20dp"
        android:text="@string/tv_DescriptionPizza"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etUpdatePizzaName" />

    <EditText
        android:id="@+id/etDescriptionUpdate"
        android:layout_width="375dp"
        android:layout_height="40dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="20dp"
        android:autofillHints=""
        android:background="@drawable/edittext_rounded_corner"
        android:hint="@string/tv_DescriptionPizza"
        android:inputType="text"
        android:padding="8dp"
        android:textSize="13sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/TvDescriptionUpdate"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/TvUpdatePizzaId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/PIZZA_ID"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etDescriptionUpdate" />

    <EditText
        android:id="@+id/EtUpdatePizzaId"
        android:layout_width="176dp"
        android:layout_height="30dp"
        android:layout_marginStart="16dp"
        android:autofillHints=""
        android:background="@drawable/edittext_rounded_corner"
        android:hint="@string/PIZZA_ID"
        android:inputType="text"
        android:padding="8dp"
        android:textSize="13sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/TvUpdatePizzaId"
        app:layout_constraintVertical_bias="0.058" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/btnSave2"
        android:layout_width="74dp"
        android:layout_height="67dp"
        android:layout_marginBottom="92dp"
        android:background="@drawable/border_button"
        android:backgroundTint="@android:color/holo_purple"
        android:clickable="true"
        android:focusable="true"
        android:src="@drawable/add_task"
        android:contentDescription="@string/btn_actuPizza"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.878"
        app:layout_constraintStart_toStartOf="parent"
        app:maxImageSize="60dp" />


</androidx.constraintlayout.widget.ConstraintLayout>