<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_login_user">

    <TextView
        android:id="@+id/tv_creacionGeneral"
        android:layout_width="402dp"
        android:layout_height="114dp"
        android:layout_marginTop="16dp"
        android:text="@string/tv_Create"
        android:textSize="45sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/Tv_mensajeGeneral"
        android:layout_width="400dp"
        android:layout_height="50dp"
        android:layout_marginTop="12dp"
        android:text="@string/tv_MensajeGeneral"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_creacionGeneral" />


    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/addPizza3"
        android:layout_width="60dp"
        android:layout_height="59dp"
        android:layout_marginTop="252dp"
        android:backgroundTint="@android:color/background_light"
        android:clickable="true"
        android:focusable="true"
        android:src="@drawable/pizza2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.09"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:maxImageSize="35sp" />

    <TextView
        android:layout_width="167dp"
        android:layout_height="32dp"
        android:layout_marginStart="1dp"
        android:layout_marginTop="268dp"
        android:gravity="left"
        android:text="@string/tv_Pizzas"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/addPizza3"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/massas"
        android:layout_width="60dp"
        android:layout_height="59dp"
        android:backgroundTint="@android:color/background_light"
        android:clickable="true"
        android:focusable="true"
        android:src="@drawable/massa_pizza"
        app:layout_constraintBottom_toTopOf="@+id/ingredientes"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.09"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/addPizza3"
        app:maxImageSize="35sp" />

    <TextView
        android:layout_width="167dp"
        android:layout_height="32dp"
        android:layout_marginStart="1dp"
        android:layout_marginTop="400dp"
        android:gravity="left"
        android:text="@string/tv_Massa"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.078"
        app:layout_constraintStart_toEndOf="@+id/addPizza3"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/ingredientes"
        android:layout_width="60dp"
        android:layout_height="59dp"
        android:backgroundTint="@android:color/background_light"
        android:clickable="true"
        android:focusable="true"
        android:src="@drawable/ingredientes_pizza"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.09"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.741"
        app:maxImageSize="35sp" />

    <TextView
        android:layout_width="167dp"
        android:layout_height="32dp"
        android:layout_marginStart="1dp"
        android:gravity="left"
        android:text="@string/tv_Ingredientes"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/addPizza3"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.732" />


</androidx.constraintlayout.widget.ConstraintLayout>